# bifrost-trader-engine

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.cursor/rules/: doc-index.mdc  monitoring-ui.mdc  project-workflow.mdc  run-environment-and-requirements.mdc
config/: __init__.py  config.yaml.example
docs/: ARCHITECTURE.md  CONFIG_SAFETY_TAXONOMY.md  DATABASE.md  GUARD_TUNING_AND_IMPACT.md  PLAN_NEXT_STEPS.md  REQUIREMENTS.md  RUN_ENVIRONMENT_AND_REQUIREMENTS.md  STATE_SPACE_MAPPING.md  index.md
docs/fsm/: FSM_LINKAGE.md  daemon.md  hedge.md  (+6 more)
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
os/: README.md
scripts/: build_fsm_docs.py  check_ib_connect.py  debug_connect.py  fsm_daemon_diagram.py  fsm_hedge_diagram.py  fsm_linkage_diagram.py  fsm_trading_diagram.py  init_phase1_db.py  refresh_db_schema.py  release_pg_locks.py  run_daemon.py  run_docs.py  run_engine.py  run_frontend.sh  run_hedge_app.py  run_server.py  run_status_server.py  run_steps.py  start_status_server.py  stats_from_history.py
servers/: __init__.py  app.py  reader.py  self_check.py
src/: __init__.py
tests/: __init__.py  conftest.py  test_black_scholes.py  test_config.py  test_connector_ib.py  test_daemon_fsm_coverage.py  test_execution_fsm.py  test_gamma_scalper.py  test_gs_trading_fsm.py  test_guards.py  test_hedge_execution_fsm.py  test_hedge_flow.py  test_hedge_fsm.py  test_hedge_gate.py  test_portfolio.py  test_replay.py  test_risk_guard.py  test_state.py  test_state_classifier.py  test_trading_fsm.py
(+78 files in other folders)
