[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bifrost-trader-engine"
version = "0.1.0"
description = "Gamma scalping trading daemon for NVDA 21-35 DTE near-ATM straddle (IB)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ib_insync>=0.9.86",
    "py_vollib>=1.0.1",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]
